Overhaul certificates and session-type management