@@ -1,11 +1,11 @@
 package org.ccjmne.orca.api.rest.admin;
 
 import static org.ccjmne.orca.jooq.codegen.Tables.CERTIFICATES;
-import static org.ccjmne.orca.jooq.codegen.Tables.TRAINERPROFILES_TRAININGTYPES;
 import static org.ccjmne.orca.jooq.codegen.Tables.TRAININGTYPES;
 import static org.ccjmne.orca.jooq.codegen.Tables.TRAININGTYPES_CERTIFICATES;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 import javax.inject.Inject;
@@ -15,201 +15,190 @@ import javax.ws.rs.ForbiddenException;
 import javax.ws.rs.POST;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
 import javax.ws.rs.core.MediaType;
 
+import org.ccjmne.orca.api.inject.business.QueryParams;
 import org.ccjmne.orca.api.inject.business.Restrictions;
-import org.ccjmne.orca.api.utils.Constants;
 import org.ccjmne.orca.api.utils.Fields;
+import org.ccjmne.orca.api.utils.ParamsAssertion;
 import org.ccjmne.orca.api.utils.Transactions;
-import org.ccjmne.orca.jooq.codegen.Sequences;
 import org.jooq.DSLContext;
-import org.jooq.Record;
-import org.jooq.Row2;
+import org.jooq.Param;
+import org.jooq.Row1;
+import org.jooq.Row3;
 import org.jooq.impl.DSL;
 
 @Path("certificates")
 public class CertificatesEndpoint {
 
-  private final DSLContext ctx;
+  private final DSLContext      ctx;
+  private final ParamsAssertion ensure;
+  private final Param<Integer>  certificate;
+  private final Param<Integer>  sessionType;
 
   @Inject
-  public CertificatesEndpoint(final DSLContext ctx, final Restrictions restrictions) {
+  public CertificatesEndpoint(final DSLContext ctx, final Restrictions restrictions, final ParamsAssertion assertor, final QueryParams parameters) {
     if (!restrictions.canManageCertificates()) {
       throw new ForbiddenException();
     }
 
     this.ctx = ctx;
+    this.ensure = assertor;
+    this.certificate = parameters.get(QueryParams.CERTIFICATE);
+    this.sessionType = parameters.get(QueryParams.SESSION_TYPE);
   }
 
   @POST
   @Consumes(MediaType.APPLICATION_JSON)
-  public Integer createCert(final Map<String, String> cert) {
-    final Integer cert_pk = new Integer(this.ctx.nextval(Sequences.CERTIFICATES_CERT_PK_SEQ).intValue());
-    this.updateCert(cert_pk, cert);
-    return cert_pk;
+  public Integer createCert(final Map<String, Object> cert) {
+    return this.ctx
+        .insertInto(CERTIFICATES)
+        .set(CERTIFICATES.CERT_NAME, (String) cert.get(CERTIFICATES.CERT_NAME.getName()))
+        .set(CERTIFICATES.CERT_SHORT, (String) cert.get(CERTIFICATES.CERT_SHORT.getName()))
+        .set(CERTIFICATES.CERT_TARGET, (Integer) cert.get(CERTIFICATES.CERT_TARGET.getName()))
+        .set(CERTIFICATES.CERT_ORDER, DSL.select(DSL.count().plus(Integer.valueOf(1))).from(CERTIFICATES)) // TODO: does it need coalescing?
+        .returning(CERTIFICATES.CERT_PK)
+        .fetchOne().getValue(CERTIFICATES.CERT_PK);
   }
 
-  /**
-   * @return <code>true</code> iff a new {@link Record} was created
-   */
   @PUT
-  @Path("{cert_pk}")
+  @Path("{certificate}")
   @Consumes(MediaType.APPLICATION_JSON)
-  public Boolean updateCert(@PathParam("cert_pk") final Integer cert_pk, final Map<String, String> cert) {
-    return Transactions.with(this.ctx, transactionCtx -> {
-      final boolean exists = this.ctx.fetchExists(CERTIFICATES, CERTIFICATES.CERT_PK.eq(cert_pk));
-      if (exists) {
-        transactionCtx.update(CERTIFICATES)
-            .set(CERTIFICATES.CERT_NAME, cert.get(CERTIFICATES.CERT_NAME.getName()))
-            .set(CERTIFICATES.CERT_SHORT, cert.get(CERTIFICATES.CERT_SHORT.getName()))
-            .set(CERTIFICATES.CERT_TARGET, Integer.valueOf(cert.get(CERTIFICATES.CERT_TARGET.getName())))
-            .set(CERTIFICATES.CERT_PERMANENTONLY, Boolean.valueOf(cert.get(CERTIFICATES.CERT_PERMANENTONLY.getName())))
-            .where(CERTIFICATES.CERT_PK.eq(cert_pk)).execute();
-      } else {
-        transactionCtx.insertInto(
-                                  CERTIFICATES,
-                                  CERTIFICATES.CERT_PK,
-                                  CERTIFICATES.CERT_NAME,
-                                  CERTIFICATES.CERT_SHORT,
-                                  CERTIFICATES.CERT_TARGET,
-                                  CERTIFICATES.CERT_PERMANENTONLY,
-                                  CERTIFICATES.CERT_ORDER)
-            .values(
-                    cert_pk,
-                    cert.get(CERTIFICATES.CERT_NAME.getName()),
-                    cert.get(CERTIFICATES.CERT_SHORT.getName()),
-                    Integer.valueOf(cert.get(CERTIFICATES.CERT_TARGET.getName())),
-                    Boolean.valueOf(cert.get(CERTIFICATES.CERT_PERMANENTONLY.getName())),
-                    transactionCtx
-                        .select(DSL.coalesce(DSL.max(CERTIFICATES.CERT_ORDER), Integer.valueOf(0)).add(Integer.valueOf(1)).as("order"))
-                        .from(CERTIFICATES)
-                        .fetchOne("order", Integer.class))
-            .execute();
-      }
+  public void updateCert(final Map<String, Object> cert) {
+    Transactions.with(this.ctx, transactionCtx -> {
+      this.ensure.resourceExists(QueryParams.CERTIFICATE, transactionCtx).or("No such certificate.");
 
-      return Boolean.valueOf(!exists);
+      transactionCtx
+          .update(CERTIFICATES)
+          .set(CERTIFICATES.CERT_NAME, (String) cert.get(CERTIFICATES.CERT_NAME.getName()))
+          .set(CERTIFICATES.CERT_SHORT, (String) cert.get(CERTIFICATES.CERT_SHORT.getName()))
+          .set(CERTIFICATES.CERT_TARGET, (Integer) cert.get(CERTIFICATES.CERT_TARGET.getName()))
+          .where(CERTIFICATES.CERT_PK.eq(this.certificate))
+          .execute();
     });
   }
+
+  @DELETE
+  @Path("{certificate}")
+  public void deleteCert() {
+    Transactions.with(this.ctx, transactionCtx -> {
+      this.ensure.resourceExists(QueryParams.CERTIFICATE, transactionCtx);
+
+      transactionCtx.delete(CERTIFICATES).where(CERTIFICATES.CERT_PK.eq(this.certificate)).execute();
+      transactionCtx.execute(Fields.cleanupSequence(CERTIFICATES, CERTIFICATES.CERT_PK, CERTIFICATES.CERT_ORDER));
+    });
+  }
+
+  @POST
+  @Path("reorder")
+  @Consumes(MediaType.APPLICATION_JSON)
+  @SuppressWarnings({ "unchecked", "null" })
+  public void reorderCerts(final List<Integer> certificates) {
+    if ((certificates == null) || certificates.isEmpty()) {
+      return;
+    }
+
+    this.ctx
+        .update(CERTIFICATES)
+        .set(CERTIFICATES.CERT_ORDER, DSL.field("idx", Integer.class))
+        .from(DSL.select(DSL.field("key"), DSL.rowNumber().over().as("idx"))
+            .from(DSL.values(certificates.stream().map(DSL::row).toArray(Row1[]::new)).as("unused", "key")))
+        .where(CERTIFICATES.CERT_PK.eq(DSL.field("key", Integer.class)))
+        .execute();
+  }
+
+  // SESSION-TYPES SECTION
+  // TODO: maybe extract into its own endpoint?
 
   @POST
   @Path("session-types")
   @Consumes(MediaType.APPLICATION_JSON)
-  public Integer createTrty(final Map<String, Object> trty) {
-    final Integer trty_pk = new Integer(this.ctx.nextval(Sequences.TRAININGTYPES_TRTY_PK_SEQ).intValue());
-    this.updateTrty(trty_pk, trty);
-    return trty_pk;
-  }
-
-  /**
-   * @return <code>true</code> iff a new {@link Record} was created
-   */
-  @PUT
-  @Path("session-types/{trty_pk}")
-  @Consumes(MediaType.APPLICATION_JSON)
-  public Boolean updateTrty(@PathParam("trty_pk") final Integer trty_pk, final Map<String, Object> trty) {
+  @SuppressWarnings("unchecked")
+  public Integer createSessionType(final Map<String, Object> type) {
     return Transactions.with(this.ctx, transactionCtx -> {
-      final boolean exists = this.ctx.fetchExists(TRAININGTYPES, TRAININGTYPES.TRTY_PK.eq(trty_pk));
-      if (exists) {
-        transactionCtx.update(TRAININGTYPES)
-            .set(TRAININGTYPES.TRTY_NAME, String.valueOf(trty.get(TRAININGTYPES.TRTY_NAME.getName())))
-            .where(TRAININGTYPES.TRTY_PK.eq(trty_pk)).execute();
-      } else {
-        transactionCtx.insertInto(
-                                  TRAININGTYPES,
-                                  TRAININGTYPES.TRTY_PK,
-                                  TRAININGTYPES.TRTY_NAME,
-                                  TRAININGTYPES.TRTY_ORDER)
-            .values(
-                    trty_pk,
-                    trty.get(TRAININGTYPES.TRTY_NAME.getName()).toString(),
-                    transactionCtx
-                        .select(DSL.coalesce(DSL.max(TRAININGTYPES.TRTY_ORDER), Integer.valueOf(0)).add(Integer.valueOf(1)).as("order"))
-                        .from(TRAININGTYPES)
-                        .fetchOne("order", Integer.class))
-            .execute();
+      final Integer id = transactionCtx
+          .insertInto(TRAININGTYPES)
+          .set(TRAININGTYPES.TRTY_NAME, (String) type.get(TRAININGTYPES.TRTY_NAME.getName()))
+          .set(TRAININGTYPES.TRTY_ORDER, DSL.select(DSL.count().plus(Integer.valueOf(1))).from(TRAININGTYPES)) // TODO: does it need coalescing?
+          .returning(TRAININGTYPES.TRTY_PK)
+          .fetchOne().getValue(TRAININGTYPES.TRTY_PK);
 
+      final Row3<Integer, Integer, Integer>[] certs = ((List<Map<String, Integer>>) type.getOrDefault("certificates", Collections.EMPTY_LIST)).stream()
+          .map(c -> DSL.row(id, c.get(CERTIFICATES.CERT_PK.getName()), c.get(TRAININGTYPES_CERTIFICATES.TTCE_DURATION.getName())))
+          .toArray(Row3[]::new);
+
+      if (certs.length > 0) {
         transactionCtx
-            .insertInto(TRAINERPROFILES_TRAININGTYPES, TRAINERPROFILES_TRAININGTYPES.TPTT_TRPR_FK, TRAINERPROFILES_TRAININGTYPES.TPTT_TRTY_FK)
-            .values(Constants.DEFAULT_TRAINERPROFILE, trty_pk).execute();
-      }
-
-      transactionCtx.delete(TRAININGTYPES_CERTIFICATES).where(TRAININGTYPES_CERTIFICATES.TTCE_TRTY_FK.eq(trty_pk)).execute();
-      @SuppressWarnings("unchecked")
-      final Row2<Integer, Integer>[] certificates = ((Map<String, Integer>) trty.getOrDefault("certificates", Collections.EMPTY_MAP)).entrySet()
-          .stream().map((entry) -> DSL.row(Integer.valueOf(entry.getKey()), entry.getValue())).toArray(Row2[]::new);
-
-      if (certificates.length > 0) {
-        transactionCtx.insertInto(
-                                  TRAININGTYPES_CERTIFICATES,
-                                  TRAININGTYPES_CERTIFICATES.TTCE_TRTY_FK,
-                                  TRAININGTYPES_CERTIFICATES.TTCE_CERT_FK,
-                                  TRAININGTYPES_CERTIFICATES.TTCE_DURATION)
-            .select(DSL.select(
-                               DSL.val(trty_pk),
-                               DSL.field("cert_pk", Integer.class),
-                               DSL.field("duration", Integer.class))
-                .from(DSL.values(certificates).as("unused", "cert_pk", "duration")))
+            .insertInto(TRAININGTYPES_CERTIFICATES)
+            .select(DSL.selectFrom(DSL.values(certs).as(DSL.table(),
+                                                        TRAININGTYPES_CERTIFICATES.TTCE_TRTY_FK,
+                                                        TRAININGTYPES_CERTIFICATES.TTCE_CERT_FK,
+                                                        TRAININGTYPES_CERTIFICATES.TTCE_DURATION)))
             .execute();
       }
 
-      return Boolean.valueOf(!exists);
+      return id;
     });
   }
 
-  @POST
-  @SuppressWarnings({ "unchecked", "null" })
-  @Path("reorder")
-  public void reassignCertificates(final Map<Integer, Integer> reassignmentMap) {
-    if (null == reassignmentMap) {
-      return;
-    }
-
+  @PUT
+  @Path("session-types/{session-type}")
+  @Consumes(MediaType.APPLICATION_JSON)
+  @SuppressWarnings("unchecked")
+  public void updateSessionType(final Map<String, Object> type) {
     Transactions.with(this.ctx, transactionCtx -> {
-      transactionCtx.update(CERTIFICATES)
-          .set(CERTIFICATES.CERT_ORDER, DSL.field("new_order", Integer.class))
-          .from(DSL.values(reassignmentMap.entrySet().stream().map(entry -> DSL.row(entry.getKey(), entry.getValue())).toArray(Row2[]::new))
-              .as("unused", "pk", "new_order"))
-          .where(CERTIFICATES.CERT_PK.eq(DSL.field("pk", Integer.class)))
+      this.ensure.resourceExists(QueryParams.SESSION_TYPE, transactionCtx);
+
+      transactionCtx
+          .update(TRAININGTYPES)
+          .set(TRAININGTYPES.TRTY_NAME, (String) type.get(TRAININGTYPES.TRTY_NAME.getName()))
+          .where(TRAININGTYPES.TRTY_PK.eq(this.sessionType))
           .execute();
-      transactionCtx.execute(Fields.cleanupSequence(CERTIFICATES, CERTIFICATES.CERT_PK, CERTIFICATES.CERT_ORDER));
+
+      transactionCtx.delete(TRAININGTYPES_CERTIFICATES).where(TRAININGTYPES_CERTIFICATES.TTCE_TRTY_FK.eq(this.sessionType)).execute();
+
+      final Row3<Integer, Integer, Integer>[] certs = ((List<Map<String, Integer>>) type.getOrDefault("certificates", Collections.EMPTY_LIST)).stream()
+          .map(c -> DSL.row(this.sessionType, c.get(CERTIFICATES.CERT_PK.getName()), c.get(TRAININGTYPES_CERTIFICATES.TTCE_DURATION.getName())))
+          .toArray(Row3[]::new);
+
+      if (certs.length > 0) {
+        transactionCtx
+            .insertInto(TRAININGTYPES_CERTIFICATES)
+            .select(DSL.selectFrom(DSL.values(certs).as(DSL.table(),
+                                                        TRAININGTYPES_CERTIFICATES.TTCE_TRTY_FK,
+                                                        TRAININGTYPES_CERTIFICATES.TTCE_CERT_FK,
+                                                        TRAININGTYPES_CERTIFICATES.TTCE_DURATION)))
+            .execute();
+      }
+    });
+  }
+
+  @DELETE
+  @Path("session-types/{session-type}")
+  public void deleteTrty() {
+    Transactions.with(this.ctx, transactionCtx -> {
+      this.ensure.resourceExists(QueryParams.SESSION_TYPE, transactionCtx);
+
+      transactionCtx.delete(TRAININGTYPES).where(TRAININGTYPES.TRTY_PK.eq(this.sessionType)).execute();
+      transactionCtx.execute(Fields.cleanupSequence(TRAININGTYPES, TRAININGTYPES.TRTY_PK, TRAININGTYPES.TRTY_ORDER));
     });
   }
 
   @POST
-  @SuppressWarnings({ "unchecked", "null" })
   @Path("session-types/reorder")
-  public void reassignTrainingTypes(final Map<Integer, Integer> reassignmentMap) {
-    if (null == reassignmentMap) {
+  @Consumes(MediaType.APPLICATION_JSON)
+  @SuppressWarnings({ "unchecked", "null" })
+  public void reorderTypes(final List<Integer> sessionTypes) {
+    if ((null == sessionTypes) || sessionTypes.isEmpty()) {
       return;
     }
 
-    Transactions.with(this.ctx, transactionCtx -> {
-      transactionCtx.update(TRAININGTYPES)
-          .set(TRAININGTYPES.TRTY_ORDER, DSL.field("new_order", Integer.class))
-          .from(DSL.values(reassignmentMap.entrySet().stream().map(entry -> DSL.row(entry.getKey(), entry.getValue())).toArray(Row2[]::new))
-              .as("unused", "pk", "new_order"))
-          .where(TRAININGTYPES.TRTY_PK.eq(DSL.field("pk", Integer.class)))
-          .execute();
-      transactionCtx.execute(Fields.cleanupSequence(TRAININGTYPES, TRAININGTYPES.TRTY_PK, TRAININGTYPES.TRTY_ORDER));
-    });
-  }
-
-  @DELETE
-  @Path("{cert_pk}")
-  public void deleteCert(@PathParam("cert_pk") final Integer cert_pk) {
-    Transactions.with(this.ctx, transactionCtx -> {
-      transactionCtx.delete(CERTIFICATES).where(CERTIFICATES.CERT_PK.eq(cert_pk)).execute();
-      transactionCtx.execute(Fields.cleanupSequence(CERTIFICATES, CERTIFICATES.CERT_PK, CERTIFICATES.CERT_ORDER));
-    });
-  }
-
-  @DELETE
-  @Path("session-types/{trty_pk}")
-  public void deleteTrty(@PathParam("trty_pk") final Integer trty_pk) {
-    Transactions.with(this.ctx, transactionCtx -> {
-      transactionCtx.delete(TRAININGTYPES).where(TRAININGTYPES.TRTY_PK.eq(trty_pk)).execute();
-      transactionCtx.execute(Fields.cleanupSequence(TRAININGTYPES, TRAININGTYPES.TRTY_PK, TRAININGTYPES.TRTY_ORDER));
-    });
+    this.ctx
+        .update(TRAININGTYPES)
+        .set(TRAININGTYPES.TRTY_ORDER, DSL.field("idx", Integer.class))
+        .from(DSL.select(DSL.field("key"), DSL.rowNumber().over().as("idx"))
+            .from(DSL.values(sessionTypes.stream().map(DSL::row).toArray(Row1[]::new)).as("unused", "key")))
+        .where(TRAININGTYPES.TRTY_PK.eq(DSL.field("key", Integer.class)))
+        .execute();
   }
 }
